--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,7 @@
+SHCleaner v1.1.3:
+- Added Process Lasso to application cleaner
+- Put Local Temp cleaner in windows cleaner
+
 SHCleaner v1.1.2:
 - Official first public release
 
