--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,7 @@
+SHCleaner v1.1.4:
+- Added Driver Easy and FL Studio 20 to application cleaner
+- Changed how Internet Explorer is cleaned in browser cleaner
+
 SHCleaner v1.1.3:
 - Added Process Lasso to application cleaner
 - Put Local Temp cleaner in windows cleaner
