--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,8 @@
+SHCleaner v1.1.6:
+- Added Windows Health to Windows Cleaner
+- Added Intel to application cleaner
+- Slightly improved Discord cleaning in the application cleaner
+
 SHCleaner v1.1.5:
 - Fixed Browser Cleaner deleting saved passwords for Brave and Chrome
 - Added Reflector 3 and Steam to application cleaner
