--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,7 @@
+SHCleaner v1.1.9:
+- Added Firefox to Internet Cleaner
+- Added Cygwin & Cygwin64 to Application Cleaner
+
 SHCleaner v1.1.8:
 - Added Dependency Installer
 - Added the dependency of SQLite3 which is required for future versions of SHCleaner
