--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,6 @@
+SHCleaner v1.2.0:
+- Changed the download link for the dependencies in the Dependency Installer
+
 SHCleaner v1.1.9:
 - Added Firefox to Internet Cleaner
 - Added Cygwin & Cygwin64 to Application Cleaner
