--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,8 @@
+SHCleaner v1.2.3:
+- Changed the Dependency Installer & Update Checker to use Invoke-WebRequest for Powershell Downloading
+- Added an internet connection check to the Update Check
+- Process Lasso will no longer be closed during Application Cleaning
+
 SHCleaner v1.2.2:
 - Added a Dependency Update Checker to the Updater Checker
 - Made a small change to the Dependency Installer
