--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,6 @@
+SHCleaner v1.2.4:
+- Fixed a typo in the internet connection checker for the Update Checker
+
 SHCleaner v1.2.3:
 - Changed the Dependency Installer & Update Checker to use Invoke-WebRequest for Powershell Downloading
 - Added an internet connection check to the Update Check
