--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,6 @@
+SHCleaner v1.2.6:
+- Slightly improved Firefox cleaning in the Browser Cleaner
+
 SHCleaner v1.2.5:
 - Added Net Security Protocol to Invoke-WebRequest for Powershell Downloading
 
