--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,7 @@
+SHCleaner v1.3.1:
+- Added AirParrot 2 to the application cleaner
+- Changed Reflector 3 cleaning in the application cleaner
+
 SHCleaner v1.3.0:
 - Fixed a typo issue with Revo Uninstaller Pro in the application cleaner
 
