Update SHCleaner to 1.3.4

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,7 @@
+SHCleaner v1.3.4:
+- Added McAfee Endpoint Security to the application cleaner
+- Separated all of the Adobe and Auslogics applications in the application cleaner
+
 SHCleaner v1.3.3:
 - Added HitmanPro to the application cleaner
 
