--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,7 @@
+SHCleaner v2.0.1:
+- Enabled the Browser Cleaner
+- Updated the Browser Cleaner to support the version 2 changes
+
 SHCleaner v2.0.0:
 - Completely recoded SHCleaner
 - Changed SQLite3 To SHCleaner's ProgramData rather then WinDir
