--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,5 @@
 SHCleaner v2.0.2:
-- Added Mailbird, Icecream Screen Recorder, Icecream Password Manager, Icecream PDF Editor to the application
+- Added Affinity Designer, Mailbird, Icecream Screen Recorder, Icecream Password Manager, Icecream PDF Editor to the application
 - Added a Windows Update Cleanup option
 - Other minor changes
 
