--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,6 @@
+SHCleaner v2.0.3:
+- Fixed an issue with the Browser Cleaner
+
 SHCleaner v2.0.2:
 - Added Affinity Designer, Mailbird, Icecream Screen Recorder, Icecream Password Manager, Icecream PDF Editor to the Application Cleaner
 - Added a Windows Update Cleanup option
