--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,6 @@
+SHCleaner v2.0.4:
+- Made a small change to Firefox in the Browser Cleaner
+
 SHCleaner v2.0.3:
 - Fixed an issue with the Browser Cleaner
 
