--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,6 @@
+SHCleaner v2.0.6:
+- Changed SOUND FORGE Pro + Suite 14.0 and VEGAS Pro 17.0 cleaning in the Application Cleaner
+
 SHCleaner v2.0.5:
 - Fixed Cygwin and Cygwin64 in the Application Cleaner
 - Improved on Icecream PDF Editor cleaning in the Application Cleaner
