--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,6 @@
+SHCleaner v2.0.7:
+- Removed Internet Explorer from Browser Cleaning
+
 SHCleaner v2.0.6:
 - Changed SOUND FORGE Pro + Suite 14.0 and VEGAS Pro 17.0 cleaning in the Application Cleaner
 
